test: refactor service test fixtures